[package]
name = "rust-crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.10.3"
reqwest = "0.11.23"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.116"
tokio = { version = "1.35.1", features = ["full"] }
